tests/integration/targets/playbooks/provision_playbook/example.com/platform/jaeger/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tavros
  namespace: jaeger
  annotations:
    cert-manager.io/cluster-issuer: tavros
    kubernetes.io/ingress.class: prod
    konghq.com/strip-path: "true"
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: "302"
    konghq.com/plugins: tavros-oidc-jaeger
spec:
  rules:
    - host: jaeger.tavros.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tavros-query
                port:
                  name: http-query
  tls:
    - hosts:
        - jaeger.tavros.example.com
      secretName: jaeger-ingress-cert
